fix heading spacing

--- a/resources/web/style/basic/heading.pcss
+++ b/resources/web/style/basic/heading.pcss
@@ -35,23 +35,23 @@
   h2 {
     font-size: 27px;
     line-height: 32px;
-    margin: 20px 0;
+    margin: 45px 0 12px;
     a { font-weight: 300; }
   }
 
   h3 {
     font-size: 22px;
-    margin: 56px 0 16px;
+    margin: 24px 0 12px;
   }
 
   h4 {
     font-size: 20px;
-    margin: 32px 0 12px;
+    margin: 24px 0 12px;
   }
 
   h5 {
     font-size: 18px;
-    margin: 16px 0 5px;
+    margin: 24px 0 12px;
   }
 
   .date-edited {
